--- a/mind_heartbeat/feelings/templates/feelings/list.html
+++ b/mind_heartbeat/feelings/templates/feelings/list.html
@@ -5,9 +5,28 @@
 {% block content %}
   <div class="d-flex align-items-center justify-content-between mb-4 mt-5">
     <h1 class="h3 fw-bold mb-0">感情記録一覧</h1>
-    <a href="{% url 'feelings:graph' %}" class="btn btn-primary fw-bold">
-      <i class="bi bi-graph-up me-2"></i>グラフ表示
-    </a>
+    <div class="dropdown">
+      <button class="btn btn-primary fw-bold dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton"
+              data-bs-toggle="dropdown"
+              aria-expanded="false">
+        <i class="bi bi-bar-chart me-2"></i>メニュー
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end"
+          aria-labelledby="dropdownMenuButton">
+        <li>
+          <a class="dropdown-item" href="{% url 'feelings:create' %}">
+            <i class="bi bi-plus-square me-2"></i>気持ち作成
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="{% url 'feelings:graph' %}">
+            <i class="bi bi-graph-up me-2"></i>グラフ表示
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
   <ul class="list-unstyled">
     {% for feeling in feelings_list %}
