--- a/mind_heartbeat/templates/_shared/components/navbar.html
+++ b/mind_heartbeat/templates/_shared/components/navbar.html
@@ -29,6 +29,10 @@
             <li class="nav-item me-lg-3">
               <a class="nav-link" href="{% url 'feelings:create' %}"><i class="bi bi-plus-square me-1"></i>気持ち作成</a>
             </li>
+            <li class="nav-item me-lg-3">
+              <a class="nav-link"
+                 href="{% url 'heartrates:create-wearos-integration' %}"><i class="bi bi-smartwatch me-1"></i>Pixel Watch連携</a>
+            </li>
             <li class="nav-item dropdown me-lg-3">
               <a class="nav-link dropdown-toggle"
                  href="#"
